Fix index.html layout issue.

--- a/public/css/BSign.css
+++ b/public/css/BSign.css
@@ -85,7 +85,8 @@ h2{
     width: 100%;
     height: 100%;
     background: rgba(0,0,0,0.3);
-    position: relative;
+    position: absolute;
+    z-index:3;
     display: none;
 }
 #B-end{
@@ -94,11 +95,11 @@ h2{
     width: 300px;
     height: 185px;
     text-align: center;
-    position: absolute;
-    top: 200px;
-    left: 50px;
     border-radius: 8px;
     box-shadow: #35514c 4px 4px 12px 1px;
+    position: relative;
+    top:30%;
+    margin:0 auto 0 auto;
 }
 #B-top{
     border-bottom: #35514c 1px solid;
@@ -114,16 +115,15 @@ h2{
     width: 100%;
     height:80px;
     line-height: 25px;
-    padding-top: 1em;
+    padding: 1em 0em 0em 1em;
     text-align: left;
+
 }
 #ok{
     width: 150px;
     line-height: 35px;
     text-align: center;
-    position: absolute;
-    bottom:10px ;
-    left: 75px;
+    margin:auto;
 }
 #ok:hover{
     cursor: pointer;
